GPU implementation (prototype) complete.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,8 @@
             "name": "C++ Launch",
             "type": "cppdbg",
             "request": "launch",
-            // "program": "${workspaceRoot}/build/${fileBasenameNoExtension}",
             "program": "${workspaceRoot}/bin/SeamCarving",
-            "args": ["${workspaceRoot}/images/lake.jpg", "CPU", "0", "100"],
+            "args": ["${workspaceRoot}/images/lake.jpg", "BOTH", "0", "100"],
             "preLaunchTask": "Build&Run",
             "stopAtEntry": false,
             "launchCompleteCommand": "exec-run",
